# polyglot

./: .env.example  .gitignore  README.md  README.md.bak-slice9  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/versions/: 70e897feb3f0_audio_settings.py  99fd287fec7c_add_password_hash_and_tz_aware_session_.py  c3f81a7d2b64_guided_tour_state.py
apps/api/app/: main.py  main.py.bak-slice9
apps/api/app/api/routes/: auth.py  dashboard.py  dashboard_schemas.py  item_schemas.py  items.py  learn.py  practice.py  schemas.py
apps/api/app/auth/: passwords.py  service.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  seed.py  session.py
apps/api/app/db/seed_data/: practice_data.py  spanish_grammar.csv
apps/api/app/domain/: answer_check.py  audio.py  curriculum.py  normalize.py  practice.py  practice_stages.py  queue.py  widgets.py  xp.py
apps/api/app/importer/: curriculum_csv.py  import_service.py
apps/api/app/models/: curriculum.py  enums.py  identity.py  progress.py  tours.py
apps/api/app/services/: dashboard.py  items.py  lessons.py  levels.py  practice.py  reviews.py
apps/api/apps/api/: pyproject.toml
apps/api/lengua_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/polyglot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_admin_db.py  test_audio.py  test_auth_flow_db.py  test_capabilities.py  test_dashboard_db.py  test_health.py  test_items.py  test_items_db.py  test_learn_flow_db.py  test_leech_xp_curriculum.py  test_practice.py  test_practice_db.py  test_practice_stages.py  test_queue.py  test_tokens.py  test_widgets.py
apps/web/: .dockerignore  jest.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/items/: page.tsx
apps/web/app/levels/: page.tsx
apps/web/app/reviews/: page.tsx
apps/web/app/welcome/: page.tsx
apps/web/components/: audio-button.tsx  auth-form.tsx  header.tsx  progress-bits.tsx  protected.tsx  tour.tsx  ui.tsx  widget-grid.tsx  widgets-extra.tsx  widgets.tsx
apps/web/lib/: api.ts  auth-context.tsx  dashboard-api.ts  http.ts  items-api.ts  learn-api.ts  speech.ts  use-enter-advance.ts  widget-layout.ts
docs/: PLANNING.md  PLANNING.md.bak-slice9
slice-6/: docker-compose.yml
slice-6/apps/api/: .dockerignore  Dockerfile
slice-6/docs/: PLANNING.md
(+52 files in other folders)
