[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "pyjwt[crypto]>=2.9",
  "structlog>=24.0",
  "email-validator>=2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11", "hypothesis>=6", "pgserver>=0.1.4"]

# Only the application package is installed. alembic/, tests/, and *.ini are
# project tooling that lives in the repo but is not part of the wheel.
[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]  # S = bandit security rules
ignore = ["B008"]  # Depends()/require() in defaults is the FastAPI idiom
[tool.ruff.lint.per-file-ignores]
"app/domain/queue.py" = ["S311"]  # seeded shuffle, not cryptographic
"app/domain/curriculum.py" = ["S311"]  # seeded shuffle, not cryptographic
"app/domain/practice.py" = ["S311"]  # seeded shuffle, not cryptographic
"app/services/practice.py" = ["S311"]  # seeded shuffle, not cryptographic
"tests/*" = ["S101", "S105", "S106", "S107", "E702", "E501", "E741"]  # asserts + fake secrets in tests
"app/core/config.py" = ["S105"]  # placeholder default, real secret from env
"app/api/routes/schemas.py" = ["S105"]  # token_type="bearer" is a label

[tool.mypy]
strict = true
[tool.pytest.ini_options]
testpaths = ["tests"]
